--- a/cp02/base_ndarray.ipynb
+++ b/cp02/base_ndarray.ipynb
@@ -5,39 +5,25 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-08T06:41:35.887928Z",
-     "start_time": "2018-08-08T06:41:35.883029Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#数组的创建"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-08-08T07:17:06.517267Z",
-     "start_time": "2018-08-08T07:17:06.510426Z"
+     "end_time": "2018-08-09T05:57:10.967265Z",
+     "start_time": "2018-08-09T05:57:10.612787Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.59471353,  0.68152192,  1.0436849 ],\n",
-       "       [ 0.48876267, -0.60270897, -0.2866343 ]])"
+       "array([[ 2.13320894, -1.15607049,  0.34759762],\n",
+       "       [-0.92147232, -0.2062849 , -0.50560036]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#数组的创建\n",
     "import numpy as np\n",
     "data = np.random.randn(2, 3)\n",
     "data"
@@ -505,51 +491,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#布尔型数组"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-08T07:23:11.123775Z",
-     "start_time": "2018-08-08T07:23:11.114943Z"
+     "end_time": "2018-08-09T06:18:03.260514Z",
+     "start_time": "2018-08-09T06:18:03.252703Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 0.8629049 ,  0.94884811, -1.02716079,  1.27387569],\n",
-       "        [-1.05000221,  0.52991244,  1.37102317,  0.72267666],\n",
-       "        [ 1.64723246, -1.33386525, -0.30978588, -0.23711105],\n",
-       "        [-1.51968096,  0.31842643,  0.05301127,  0.176248  ],\n",
-       "        [ 1.04280175,  0.11963412, -0.81072267,  0.07628697],\n",
-       "        [ 1.33906493,  0.0661196 ,  0.14064057, -0.34286039],\n",
-       "        [ 0.51315271, -2.44263222,  0.22629247,  1.6447065 ]],\n",
+       "array([[[ 0.51170953, -0.07712556, -1.05745012, -0.27704819],\n",
+       "        [ 2.89898581,  0.42801871, -1.68907409,  1.11265974],\n",
+       "        [-1.29311264,  0.33478899,  1.0168691 , -0.44062838],\n",
+       "        [ 0.35222041, -0.82903384, -1.05370365,  1.1640279 ],\n",
+       "        [ 2.40198157,  1.49469044, -0.00859507, -0.02253127],\n",
+       "        [ 0.07476421,  0.19101853, -1.51826607,  0.36327673],\n",
+       "        [ 1.48843744, -0.49648609,  0.57688018, -0.65962479]],\n",
        "\n",
-       "       [[ 0.39143861, -1.23194732, -0.47081383,  1.41199298],\n",
-       "        [ 0.05162978, -0.87164755, -1.04990355,  0.9014203 ],\n",
-       "        [ 1.18051652, -0.84458869, -0.50408605, -0.01161262],\n",
-       "        [-0.78291863,  1.97730334, -0.30270521, -0.45173944],\n",
-       "        [ 1.0082998 ,  0.77337088, -0.69437647,  0.68029093],\n",
-       "        [ 0.93246802,  0.91084133,  0.20705285, -1.03782403],\n",
-       "        [ 1.04306488,  0.95447221,  0.9493524 ,  0.35725108]]])"
+       "       [[-0.47589549,  0.81824049, -0.88141369,  1.06847951],\n",
+       "        [-0.76955744, -0.07380541,  2.05880682, -0.27106064],\n",
+       "        [ 1.43294476, -0.80988376, -1.3105042 ,  0.8869198 ],\n",
+       "        [ 1.07555243, -1.68560112, -0.85838777,  0.68469225],\n",
+       "        [-0.41066734, -1.46305902,  0.22128381,  2.21895641],\n",
+       "        [-1.02927576, -0.68955424, -0.97340158,  0.15289224],\n",
+       "        [-0.374005  , -0.73003016, -0.46097384, -1.0758764 ]]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#布尔型数组\n",
     "names = np.array([\"Bob\", \"Joe\", \"Will\", \"Bob\", \"Book\", \"Nike\", \"Soo\"])\n",
     "data = np.random.randn(2,7,4)\n",
     "data1 = np.random.randn(7)\n",
@@ -558,11 +534,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-08T07:23:11.288902Z",
-     "start_time": "2018-08-08T07:23:11.283004Z"
+     "end_time": "2018-08-09T06:14:48.804286Z",
+     "start_time": "2018-08-09T06:14:48.799380Z"
     }
    },
    "outputs": [
@@ -572,7 +548,7 @@
        "array([ True, False, False,  True, False, False, False])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,25 +559,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-08T07:24:40.260386Z",
-     "start_time": "2018-08-08T07:24:40.254870Z"
+     "end_time": "2018-08-09T06:14:50.813421Z",
+     "start_time": "2018-08-09T06:14:50.807532Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 0.8629049 ,  0.94884811],\n",
-       "        [-1.51968096,  0.31842643]],\n",
+       "array([[[-0.74886973, -0.26382799],\n",
+       "        [ 1.13467454, -2.13791891]],\n",
        "\n",
-       "       [[ 0.39143861, -1.23194732],\n",
-       "        [-0.78291863,  1.97730334]]])"
+       "       [[-0.53810774,  0.63256229],\n",
+       "        [-1.37625242,  0.29550152]]])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,21 +588,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-08T07:22:30.348773Z",
-     "start_time": "2018-08-08T07:22:30.342926Z"
+     "end_time": "2018-08-09T05:57:21.452895Z",
+     "start_time": "2018-08-09T05:57:21.446025Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.43454409, 1.81834493])"
+       "array([0.2036945 , 1.51365787])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,12 +613,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:15:11.801410Z",
+     "start_time": "2018-08-09T06:15:11.795522Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.74886973, -0.26382799],\n",
+       "        [ 1.13467454, -2.13791891],\n",
+       "        [ 0.52155787,  0.72082715]],\n",
+       "\n",
+       "       [[-0.53810774,  0.63256229],\n",
+       "        [-1.37625242,  0.29550152],\n",
+       "        [ 0.37079361,  0.40664754]]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:2,(names==\"Bob\") | (names==\"Nike\"), :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:17:31.702466Z",
+     "start_time": "2018-08-09T06:17:31.695597Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.        , 0.        , 0.        , 1.14330903],\n",
+       "        [0.        , 0.        , 0.03067748, 0.9023098 ],\n",
+       "        [0.21152644, 1.00655233, 0.69990655, 0.        ],\n",
+       "        [1.13467454, 0.        , 0.        , 0.        ],\n",
+       "        [0.        , 0.17238972, 0.        , 0.20720611],\n",
+       "        [0.52155787, 0.72082715, 1.23847847, 0.        ],\n",
+       "        [0.76713014, 0.60018125, 0.        , 0.        ]],\n",
+       "\n",
+       "       [[0.        , 0.63256229, 1.02740723, 0.40743892],\n",
+       "        [0.        , 0.        , 0.        , 0.        ],\n",
+       "        [0.19982142, 0.06434617, 0.        , 0.54701428],\n",
+       "        [0.        , 0.29550152, 0.39299611, 0.32294192],\n",
+       "        [0.        , 0.08113614, 0.29084415, 0.79259225],\n",
+       "        [0.37079361, 0.40664754, 0.        , 0.44646305],\n",
+       "        [0.        , 0.58247464, 0.        , 0.7231912 ]]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data<0] = 0\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:32:48.272995Z",
+     "start_time": "2018-08-09T06:32:48.268087Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#花式索引\n",
+    "arr = np.empty((8,4))\n",
+    "for i in range(8):\n",
+    "    arr[i] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:32:50.028864Z",
+     "start_time": "2018-08-09T06:32:50.022976Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 4., 4., 4.],\n",
+       "       [3., 3., 3., 3.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [6., 6., 6., 6.]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[4,3,0,6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:36:37.326184Z",
+     "start_time": "2018-08-09T06:36:37.320751Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  3,  1,  2],\n",
+       "       [ 4,  7,  5,  6],\n",
+       "       [ 8, 11,  9, 10],\n",
+       "       [12, 15, 13, 14],\n",
+       "       [16, 19, 17, 18],\n",
+       "       [20, 23, 21, 22],\n",
+       "       [24, 27, 25, 26],\n",
+       "       [28, 31, 29, 30]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[:][:,[0,3,1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:34:13.377466Z",
+     "start_time": "2018-08-09T06:34:13.371979Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 23, 30,  9])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(32).reshape((8,4))\n",
+    "arr[[1,5,7,2], [0,3,2,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:32:08.069423Z",
+     "start_time": "2018-08-09T06:32:08.063535Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  7,  5,  6],\n",
+       "       [20, 23, 21, 22],\n",
+       "       [28, 31, 29, 30],\n",
+       "       [ 8, 11,  9, 10]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[1,5,7,2]][:,[0,3,1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:41:29.467409Z",
+     "start_time": "2018-08-09T06:41:29.460498Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  4,  8, 12, 16, 20, 24, 28],\n",
+       "       [ 1,  5,  9, 13, 17, 21, 25, 29],\n",
+       "       [ 2,  6, 10, 14, 18, 22, 26, 30],\n",
+       "       [ 3,  7, 11, 15, 19, 23, 27, 31]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#转置\n",
+    "arr = np.arange(32).reshape((8,4))\n",
+    "arr.T\n",
+    "np.transpose(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-09T06:41:03.227232Z",
+     "start_time": "2018-08-09T06:41:03.222327Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2240, 2352, 2464, 2576],\n",
+       "       [2352, 2472, 2592, 2712],\n",
+       "       [2464, 2592, 2720, 2848],\n",
+       "       [2576, 2712, 2848, 2984]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(arr.T, arr)"
+   ]
   }
  ],
  "metadata": {
