--- a/cp02/ndarray_function.ipynb
+++ b/cp02/ndarray_function.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-09T07:04:31.481504Z",
-     "start_time": "2018-08-09T07:04:30.920301Z"
+     "end_time": "2018-08-13T06:10:36.004642Z",
+     "start_time": "2018-08-13T06:10:35.415086Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.11352186,  0.97109521,  0.57798303,  1.62338397],\n",
-       "       [ 0.46387119, -0.52230146,  0.14154554,  1.47385394],\n",
-       "       [ 0.71539879,  1.14962366, -0.28726358,  0.16702734],\n",
-       "       [ 2.16351834,  0.55223056,  1.15956629,  0.43514683],\n",
-       "       [ 0.95276124,  0.03857502,  0.71465244,  1.09748095],\n",
-       "       [ 0.92322845,  0.96912339,  0.78600993,  1.36327978],\n",
-       "       [ 0.07783483,  0.60819292,  0.58595931,  1.49306071],\n",
-       "       [ 1.23245044,  0.21336906,  0.22330239, -0.4754557 ]])"
+       "array([[ 0.55502126,  0.04754553,  0.79440395,  0.12169498],\n",
+       "       [ 0.06025083,  1.20166146,  1.15834297,  1.26858668],\n",
+       "       [ 2.00580979,  0.06559817, -1.10877645,  1.76119853],\n",
+       "       [ 0.46504264, -0.254212  ,  0.4691706 ,  1.53981601],\n",
+       "       [ 0.19379617,  0.74320627, -0.45268159,  0.07013754],\n",
+       "       [ 1.72641408,  0.5415953 ,  0.6903994 ,  1.03407849],\n",
+       "       [-0.02101078,  0.48349178,  0.61227177, -0.1595111 ],\n",
+       "       [ 0.99359034,  0.92021927, -0.0979806 , -0.55539136]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,8 @@
     "ExecuteTime": {
      "end_time": "2018-08-09T07:01:46.036618Z",
      "start_time": "2018-08-09T07:01:45.174634Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -212,6 +213,371 @@
     "arr = np.random.randn(4,4)\n",
     "# print(arr)\n",
     "np.where(arr > 0, arr, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:50:42.445878Z",
+     "start_time": "2018-08-10T05:50:42.431158Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.2785382848449242"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 统计计算\n",
+    "arr = np.random.randn(5,4)\n",
+    "arr.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:50:54.596001Z",
+     "start_time": "2018-08-10T05:50:54.588149Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5.570765696898484"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:51:37.490292Z",
+     "start_time": "2018-08-10T05:51:37.485278Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-4.21208245,  2.89459296,  0.20856853, -4.46184474])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:51:43.529802Z",
+     "start_time": "2018-08-10T05:51:43.524896Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.21332195, -0.79704132,  1.61324015, -2.43780552, -2.73583707])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:56:59.982597Z",
+     "start_time": "2018-08-10T05:56:59.976155Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.random.randn(100)\n",
+    "(arr > 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:57:00.360886Z",
+     "start_time": "2018-08-10T05:57:00.354997Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(arr > 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-10T05:57:51.870001Z",
+     "start_time": "2018-08-10T05:57:51.864115Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(arr > 0).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:13:59.624657Z",
+     "start_time": "2018-08-13T06:13:59.618641Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.37375369, -2.0274274 , -1.9416361 , -1.76769553, -1.65126297,\n",
+       "       -1.65081894, -1.63461475, -1.58862369, -1.52740146, -1.41015953,\n",
+       "       -1.36742582, -1.19636646, -1.07992429, -0.96620186, -0.95741566,\n",
+       "       -0.92892957, -0.77647038, -0.76046258, -0.72199456, -0.66130669,\n",
+       "       -0.65770128, -0.60745533, -0.58192875, -0.55028748, -0.48914915,\n",
+       "       -0.48547246, -0.46169875, -0.45384622, -0.37063572, -0.35375774,\n",
+       "       -0.3529718 , -0.33897875, -0.31586332, -0.29734301, -0.27547903,\n",
+       "       -0.27083601, -0.24017252, -0.19692425, -0.17043483, -0.14975555,\n",
+       "       -0.14639795, -0.09082219, -0.09013088, -0.07016107,  0.07666789,\n",
+       "        0.10800843,  0.15870998,  0.17750724,  0.18007707,  0.18618301,\n",
+       "        0.20831906,  0.22904173,  0.28838826,  0.30523084,  0.33865421,\n",
+       "        0.39693898,  0.41903242,  0.45476759,  0.46614713,  0.46874483,\n",
+       "        0.49836218,  0.58339189,  0.61983491,  0.62018323,  0.63765414,\n",
+       "        0.6746829 ,  0.71593222,  0.83389335,  0.89186688,  0.8923394 ,\n",
+       "        0.89986551,  0.94109766,  1.04203449,  1.19474432,  1.23170321,\n",
+       "        1.33909903,  1.48885677,  1.50990568,  1.58345274,  2.51238299])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#排序\n",
+    "arr = np.random.randn(80)\n",
+    "arr.sort()\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:16:14.865197Z",
+     "start_time": "2018-08-13T06:16:14.859313Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.9267467 ,  0.31779502, -1.28089628],\n",
+       "       [-1.92895572, -0.21161281, -1.34308852],\n",
+       "       [ 1.81270248,  0.83593373,  0.1509849 ],\n",
+       "       [-0.38217037,  0.50122831,  1.02053272],\n",
+       "       [-1.12364788, -0.87041127,  0.87302511]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.random.randn(5,3)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:16:16.729551Z",
+     "start_time": "2018-08-13T06:16:16.722681Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.28089628, -0.9267467 ,  0.31779502],\n",
+       "       [-1.92895572, -1.34308852, -0.21161281],\n",
+       "       [ 0.1509849 ,  0.83593373,  1.81270248],\n",
+       "       [-0.38217037,  0.50122831,  1.02053272],\n",
+       "       [-1.12364788, -0.87041127,  0.87302511]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sort()\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:16:29.589057Z",
+     "start_time": "2018-08-13T06:16:29.584148Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.92895572, -1.34308852, -0.21161281],\n",
+       "       [-1.28089628, -0.9267467 ,  0.31779502],\n",
+       "       [-1.12364788, -0.87041127,  0.87302511],\n",
+       "       [-0.38217037,  0.50122831,  1.02053272],\n",
+       "       [ 0.1509849 ,  0.83593373,  1.81270248]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sort(0)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:19:32.190643Z",
+     "start_time": "2018-08-13T06:19:32.176391Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bob', 'Book', 'Joe', 'Nike', 'Soo', 'Will'], dtype='<U4')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = np.array([\"Bob\", \"Joe\", \"Will\", \"Bob\", \"Book\", \"Nike\", \"Soo\"])\n",
+    "np.unique(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:21:31.289670Z",
+     "start_time": "2018-08-13T06:21:31.280838Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True, False, False, False, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.arange(10)\n",
+    "arr2 = np.arange(5)\n",
+    "np.in1d(arr1, arr2)"
    ]
   },
   {
