--- a/cp02/ndarray_function.ipynb
+++ b/cp02/ndarray_function.ipynb
@@ -582,6 +582,228 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:37:30.217712Z",
+     "start_time": "2018-08-13T06:37:30.209860Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.75888817, -0.86516164, -0.02923044, -0.94218728, -1.41304256],\n",
+       "       [-0.686117  , -2.87825669, -4.05457581,  3.91873849,  7.32489226],\n",
+       "       [-1.08122318, -2.33793523, -2.97904106,  1.66165437,  4.13519117],\n",
+       "       [-1.46375908, -4.61015516, -6.84850217,  5.801243  , 10.82168252],\n",
+       "       [ 0.64537697,  2.52788868,  3.25399558, -2.26561991, -4.83361964]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy.linalg import *\n",
+    "arr = np.random.randn(5,5)\n",
+    "arr2 = np.random.randn(5,5)\n",
+    "inv(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:37:32.272437Z",
+     "start_time": "2018-08-13T06:37:32.267421Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.40918798, -2.2210128 ,  0.14040489, -3.59561106,  3.28181225],\n",
+       "       [ 5.7209089 ,  0.12912907,  2.33947277,  0.79137771, -3.61066502],\n",
+       "       [-5.55453132,  2.91621147, -4.262168  ,  1.91486353,  3.08920855],\n",
+       "       [-2.83687163,  0.16302478, -0.27736488,  0.47475466, -1.73190135],\n",
+       "       [ 0.50669472,  1.43058586, -1.42737014,  0.73949738,  1.66756009]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.dot(arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:37:32.801330Z",
+     "start_time": "2018-08-13T06:37:32.794462Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.40918798, -2.2210128 ,  0.14040489, -3.59561106,  3.28181225],\n",
+       "       [ 5.7209089 ,  0.12912907,  2.33947277,  0.79137771, -3.61066502],\n",
+       "       [-5.55453132,  2.91621147, -4.262168  ,  1.91486353,  3.08920855],\n",
+       "       [-2.83687163,  0.16302478, -0.27736488,  0.47475466, -1.73190135],\n",
+       "       [ 0.50669472,  1.43058586, -1.42737014,  0.73949738,  1.66756009]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(arr, arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:57:30.404770Z",
+     "start_time": "2018-08-13T06:57:30.392467Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -1,  -2,  -3,  -4,  -5,  -6,  -5,  -4,  -5,  -4,  -5,  -6,  -5,\n",
+       "        -6,  -5,  -4,  -5,  -6,  -5,  -4,  -3,  -4,  -5,  -4,  -3,  -2,\n",
+       "        -3,  -2,  -3,  -2,  -3,  -2,  -1,   0,   1,   0,   1,   0,  -1,\n",
+       "         0,  -1,  -2,  -3,  -2,  -1,   0,  -1,   0,  -1,   0,   1,   2,\n",
+       "         3,   2,   3,   4,   3,   2,   1,   0,   1,   0,   1,   0,   1,\n",
+       "         0,   1,   2,   1,   0,  -1,  -2,  -1,   0,  -1,  -2,  -3,  -4,\n",
+       "        -5,  -4,  -3,  -2,  -1,   0,  -1,   0,   1,   2,   3,   4,   3,\n",
+       "         4,   3,   2,   3,   2,   1,   0,   1,   2,   1,   0,   1,   2,\n",
+       "         1,   2,   1,   2,   3,   2,   3,   2,   3,   2,   3,   2,   1,\n",
+       "         0,   1,   2,   1,   2,   1,   2,   1,   0,  -1,  -2,  -3,  -2,\n",
+       "        -1,  -2,  -1,   0,   1,   2,   3,   4,   5,   4,   5,   6,   7,\n",
+       "         6,   7,   6,   5,   4,   3,   4,   5,   4,   5,   6,   7,   6,\n",
+       "         7,   6,   5,   4,   3,   4,   3,   2,   1,   2,   3,   2,   3,\n",
+       "         4,   5,   4,   3,   4,   5,   4,   5,   6,   7,   6,   7,   8,\n",
+       "         9,  10,  11,  12,  13,  14,  13,  12,  11,  10,  11,  12,  13,\n",
+       "        14,  15,  14,  13,  12,  11,  12,  13,  12,  13,  14,  13,  14,\n",
+       "        15,  14,  15,  14,  13,  14,  15,  16,  17,  18,  17,  16,  17,\n",
+       "        16,  15,  16,  15,  16,  15,  16,  17,  18,  19,  18,  19,  20,\n",
+       "        19,  20,  21,  20,  19,  18,  19,  18,  17,  16,  17,  16,  17,\n",
+       "        16,  15,  14,  15,  14,  13,  12,  13,  12,  11,  12,  13,  12,\n",
+       "        13,  14,  15,  16,  17,  18,  19,  18,  17,  18,  19,  18,  19,\n",
+       "        20,  21,  22,  21,  20,  21,  22,  23,  24,  23,  24,  23,  22,\n",
+       "        21,  20,  19,  20,  19,  18,  17,  18,  19,  20,  19,  18,  17,\n",
+       "        18,  17,  16,  15,  14,  15,  16,  15,  14,  15,  16,  15,  16,\n",
+       "        17,  16,  17,  16,  15,  14,  15,  14,  13,  12,  13,  12,  11,\n",
+       "        12,  11,  12,  11,  12,  11,  12,  11,  10,   9,   8,   9,   8,\n",
+       "         9,  10,   9,  10,   9,  10,   9,  10,  11,  12,  13,  14,  15,\n",
+       "        14,  15,  14,  15,  16,  15,  16,  17,  16,  17,  18,  19,  18,\n",
+       "        19,  18,  19,  18,  17,  16,  15,  16,  15,  14,  15,  14,  15,\n",
+       "        14,  13,  12,  13,  12,  13,  12,  11,  12,  13,  12,  11,  12,\n",
+       "        13,  14,  13,  14,  15,  16,  17,  18,  19,  20,  21,  20,  19,\n",
+       "        18,  19,  20,  21,  22,  21,  22,  21,  22,  21,  22,  23,  22,\n",
+       "        23,  24,  25,  26,  25,  26,  25,  26,  25,  24,  23,  22,  21,\n",
+       "        22,  23,  22,  23,  22,  23,  22,  23,  24,  25,  24,  23,  22,\n",
+       "        23,  22,  23,  22,  21,  20,  21,  22,  21,  20,  19,  18,  19,\n",
+       "        20,  19,  20,  19,  18,  19,  20,  19,  20,  19,  18,  19,  20,\n",
+       "        19,  18,  19,  20,  19,  20,  19,  20,  19,  20,  19,  20,  21,\n",
+       "        22,  21,  20,  19,  18,  19,  20,  19,  18,  17,  16,  17,  18,\n",
+       "        19,  20,  21,  22,  21,  20,  21,  22,  21,  20,  19,  18,  19,\n",
+       "        18,  17,  16,  15,  14,  13,  12,  11,  10,  11,  12,  13,  12,\n",
+       "        11,  12,  13,  14,  15,  16,  17,  18,  19,  18,  17,  18,  19,\n",
+       "        20,  21,  20,  19,  20,  21,  20,  21,  22,  23,  22,  21,  22,\n",
+       "        21,  20,  19,  18,  17,  18,  19,  18,  19,  20,  19,  20,  21,\n",
+       "        20,  21,  20,  19,  18,  17,  18,  19,  20,  21,  22,  21,  22,\n",
+       "        21,  22,  21,  22,  21,  22,  21,  22,  23,  24,  23,  22,  21,\n",
+       "        20,  21,  20,  21,  22,  21,  22,  21,  20,  19,  20,  19,  20,\n",
+       "        19,  18,  19,  20,  19,  18,  17,  18,  19,  20,  19,  20,  19,\n",
+       "        18,  17,  18,  19,  18,  19,  20,  19,  20,  21,  22,  21,  22,\n",
+       "        21,  20,  19,  20,  21,  20,  21,  20,  21,  20,  21,  20,  21,\n",
+       "        22,  23,  22,  23,  22,  21,  22,  21,  20,  19,  18,  17,  18,\n",
+       "        19,  20,  19,  18,  19,  18,  17,  16,  17,  18,  19,  18,  17,\n",
+       "        16,  17,  18,  17,  18,  17,  16,  15,  16,  15,  16,  15,  14,\n",
+       "        13,  12,  11,  12,  13,  14,  15,  16,  17,  18,  17,  18,  17,\n",
+       "        18,  19,  18,  17,  18,  19,  20,  21,  22,  23,  22,  23,  22,\n",
+       "        23,  22,  21,  20,  19,  20,  21,  20,  21,  22,  21,  20,  19,\n",
+       "        20,  19,  18,  19,  18,  17,  16,  15,  16,  15,  16,  17,  16,\n",
+       "        17,  16,  15,  16,  17,  16,  17,  18,  17,  18,  19,  20,  19,\n",
+       "        18,  19,  18,  19,  18,  19,  20,  21,  20,  21,  20,  21,  22,\n",
+       "        21,  20,  19,  18,  17,  16,  15,  16,  17,  18,  17,  16,  15,\n",
+       "        14,  13,  12,  13,  12,  11,  10,  11,  10,   9,  10,   9,   8,\n",
+       "         9,  10,   9,   8,   7,   6,   5,   6,   5,   4,   5,   4,   3,\n",
+       "         4,   5,   4,   5,   4,   5,   4,   5,   4,   3,   2,   1,   2,\n",
+       "         1,   2,   1,   0,  -1,   0,  -1,   0,   1,   0,   1,   2,   1,\n",
+       "         0,  -1,   0,  -1,   0,  -1,  -2,  -3,  -4,  -3,  -4,  -3,  -4,\n",
+       "        -3,  -2,  -1,  -2,  -1,  -2,  -1,   0,  -1,   0,   1,   2,   1,\n",
+       "         2,   1,   2,   1,   0,  -1,  -2,  -3,  -2,  -3,  -2,  -1,  -2,\n",
+       "        -1,  -2,  -1,   0,  -1,   0,   1,   0,   1,   2,   1,   2,   1,\n",
+       "         0,  -1,   0,  -1,  -2,  -3,  -4,  -5,  -6,  -7,  -8,  -9, -10,\n",
+       "        -9,  -8,  -9, -10, -11, -12, -11, -10, -11, -10, -11, -10, -11,\n",
+       "       -10,  -9, -10,  -9, -10,  -9, -10, -11, -12, -13, -14, -13, -14,\n",
+       "       -13, -12, -13, -12, -11, -10, -11, -12, -11, -12, -11, -10,  -9,\n",
+       "       -10, -11, -12, -13, -14, -13, -12, -13, -14, -13, -14, -15, -16,\n",
+       "       -17, -16, -15, -14, -15, -16, -17, -18, -19, -20, -19, -20, -21,\n",
+       "       -22, -21, -20, -19, -20, -21, -22, -21, -22, -23, -22, -21, -20,\n",
+       "       -19, -20, -19, -18, -19, -18, -17, -18, -17, -18, -17, -16, -17,\n",
+       "       -18, -19, -18, -19, -20, -21, -20, -19, -18, -17, -16, -15, -14,\n",
+       "       -15, -14, -13, -12, -11, -10,  -9,  -8,  -9,  -8,  -7,  -6],\n",
+       "      dtype=int32)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#实例\n",
+    "nsteps = 1000\n",
+    "draws = np.random.randint(0, 2, size=nsteps)\n",
+    "steps = np.where(draws > 0, 1, -1)\n",
+    "walk = steps.cumsum()\n",
+    "walk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-13T06:57:33.415892Z",
+     "start_time": "2018-08-13T06:57:33.410376Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "183"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.abs(walk) >= 10).argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
