--- a/cp03/pandas_adv.ipynb
+++ b/cp03/pandas_adv.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-20T07:16:02.403526Z",
-     "start_time": "2018-08-20T07:16:01.833217Z"
+     "end_time": "2018-08-22T08:51:54.617504Z",
+     "start_time": "2018-08-22T08:51:53.618129Z"
     },
     "collapsed": true
    },
@@ -124,7 +124,8 @@
     "ExecuteTime": {
      "end_time": "2018-08-20T07:19:46.613997Z",
      "start_time": "2018-08-20T07:19:46.608110Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -159,6 +160,153 @@
    ],
    "source": [
     "grouped.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-22T08:53:17.089972Z",
+     "start_time": "2018-08-22T08:53:17.056607Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data1</th>\n",
+       "      <th>key1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>nini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>nini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>222</td>\n",
+       "      <td>nin2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   data1  key1\n",
+       "0     11  nini\n",
+       "1     11  nini\n",
+       "2    222  nin2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([{\n",
+    "    \"key1\": 'nini',\n",
+    "    \"data1\" : 11\n",
+    "}, {\n",
+    "     \"key1\": 'nini',\n",
+    "    \"data1\" : 11\n",
+    "}, {\n",
+    "     \"key1\": 'nin2',\n",
+    "    \"data1\" : 222\n",
+    "}])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-22T09:10:27.769227Z",
+     "start_time": "2018-08-22T09:10:27.757450Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>key</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>key</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0   1\n",
+       "0  key  11\n",
+       "1  key  33"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([(\"key\", 11), (\"key\", 33)])\n",
+    "df"
    ]
   },
   {
