--- a/cp07/base.ipynb
+++ b/cp07/base.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-10T07:00:03.570014Z",
-     "start_time": "2018-10-10T07:00:02.971019Z"
+     "end_time": "2018-10-11T06:40:20.974242Z",
+     "start_time": "2018-10-11T06:40:19.505223Z"
     },
     "collapsed": true
    },
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-09-20T06:25:47.108078Z",
-     "start_time": "2018-09-20T06:25:47.069976Z"
+     "end_time": "2018-10-11T06:40:21.114515Z",
+     "start_time": "2018-10-11T06:40:21.076245Z"
     }
    },
    "outputs": [
@@ -58,36 +58,36 @@
        "      <th>0</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-0.966907</td>\n",
-       "      <td>-0.064146</td>\n",
+       "      <td>-1.239038</td>\n",
+       "      <td>1.271801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>a</td>\n",
        "      <td>two</td>\n",
-       "      <td>0.334563</td>\n",
-       "      <td>0.522675</td>\n",
+       "      <td>-0.658388</td>\n",
+       "      <td>0.839947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>b</td>\n",
        "      <td>one</td>\n",
-       "      <td>-0.712588</td>\n",
-       "      <td>-1.468710</td>\n",
+       "      <td>-1.143278</td>\n",
+       "      <td>-0.963737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>b</td>\n",
        "      <td>two</td>\n",
-       "      <td>-0.361241</td>\n",
-       "      <td>0.976566</td>\n",
+       "      <td>-0.014854</td>\n",
+       "      <td>1.238310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-0.185505</td>\n",
-       "      <td>1.072351</td>\n",
+       "      <td>0.318791</td>\n",
+       "      <td>-0.478045</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -95,11 +95,11 @@
       ],
       "text/plain": [
        "  key1 key2     data1     data2\n",
-       "0    a  one -0.966907 -0.064146\n",
-       "1    a  two  0.334563  0.522675\n",
-       "2    b  one -0.712588 -1.468710\n",
-       "3    b  two -0.361241  0.976566\n",
-       "4    a  one -0.185505  1.072351"
+       "0    a  one -1.239038  1.271801\n",
+       "1    a  two -0.658388  0.839947\n",
+       "2    b  one -1.143278 -0.963737\n",
+       "3    b  two -0.014854  1.238310\n",
+       "4    a  one  0.318791 -0.478045"
       ]
      },
      "execution_count": 2,
@@ -900,6 +900,261 @@
    ],
    "source": [
     "grouped_pct.agg(['mean', 'std', lambda x: x.max() - x.min()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-11T06:41:06.839379Z",
+     "start_time": "2018-10-11T06:41:06.823679Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key1</th>\n",
+       "      <th>key2</th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>one</td>\n",
+       "      <td>1.972546</td>\n",
+       "      <td>1.343086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a</td>\n",
+       "      <td>two</td>\n",
+       "      <td>0.531648</td>\n",
+       "      <td>1.266071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>one</td>\n",
+       "      <td>-0.308857</td>\n",
+       "      <td>-1.300143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b</td>\n",
+       "      <td>two</td>\n",
+       "      <td>-0.347068</td>\n",
+       "      <td>0.661825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.312559</td>\n",
+       "      <td>-0.428947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key1 key2     data1     data2\n",
+       "0    a  one  1.972546  1.343086\n",
+       "1    a  two  0.531648  1.266071\n",
+       "2    b  one -0.308857 -1.300143\n",
+       "3    b  two -0.347068  0.661825\n",
+       "4    a  one  0.312559 -0.428947"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'key1': ['a', 'a', 'b', 'b', 'a'],\n",
+    "                 'key2': ['one', 'two', 'one', 'two', 'one'],\n",
+    "                 'data1': np.random.randn(5),\n",
+    "                 'data2': np.random.randn(5)})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-11T06:41:47.608872Z",
+     "start_time": "2018-10-11T06:41:47.587043Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_data1</th>\n",
+       "      <th>mean_data2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key1</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>0.938918</td>\n",
+       "      <td>0.726736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>-0.327963</td>\n",
+       "      <td>-0.319159</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mean_data1  mean_data2\n",
+       "key1                        \n",
+       "a       0.938918    0.726736\n",
+       "b      -0.327963   -0.319159"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k1_mean = df.groupby('key1').mean().add_prefix('mean_')\n",
+    "k1_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-11T06:43:27.784619Z",
+     "start_time": "2018-10-11T06:43:27.747082Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.938918</td>\n",
+       "      <td>0.726736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.938918</td>\n",
+       "      <td>0.726736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.327963</td>\n",
+       "      <td>-0.319159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.327963</td>\n",
+       "      <td>-0.319159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.938918</td>\n",
+       "      <td>0.726736</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      data1     data2\n",
+       "0  0.938918  0.726736\n",
+       "1  0.938918  0.726736\n",
+       "2 -0.327963 -0.319159\n",
+       "3 -0.327963 -0.319159\n",
+       "4  0.938918  0.726736"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k1_mean = df.groupby('key1').transform(np.mean)\n",
+    "k1_mean"
    ]
   },
   {
